# multilingual

./: AGENTS.md  CHANGELOG.md  README.md  RELEASE.md  USAGE.md  mkdocs.yml  pyproject.toml
.github/workflows/: compatibility-312.yml  docs-pages.yml  package-artifacts.yml  pylint.yml  pythonpackage.yml  wasm-backends-test.yml
docs/: BACKEND_TESTING_STRATEGY.md  MEMORY_GAME_DEMO.md  WASM_AI_INTEGRATION.md  WASM_ARCHITECTURE_OVERVIEW.md  WASM_DEVELOPMENT.md  compatibility_matrix.md  demos.md  design.md  memory-game-demo.html  playground.md  reference.md  releasing.md
docs/browser/: index.html
docs/fr/: programmation.md
docs/research/: fixed_semantic_spatial_computation.md  (+1 more)
examples/: complete_features_ar.multi  complete_features_bn.multi  complete_features_da.multi  complete_features_de.multi  complete_features_en.multi  complete_features_es.multi  complete_features_fi.multi  complete_features_fr.multi  complete_features_hi.multi  complete_features_it.multi  complete_features_ja.multi  complete_features_nl.multi  complete_features_pl.multi  complete_features_pt.multi  complete_features_sv.multi  complete_features_ta.multi  complete_features_zh.multi  diffusion.fr.multi  diffusion.multi  diffusion_polymodal.py  ecosystem.fr.multi  ecosystem.multi  ecosystem_polymodal.py  eden_growth.fr.multi  eden_growth.multi  game_of_life.fr.multi  game_of_life.multi  game_of_life_polymodal.py  gray_scott.fr.multi  gray_scott.multi  lindenmayer.multi  memory_game_en.multi  memory_game_fr.multi  network_epidemic.fr.multi  network_epidemic.multi  network_epidemic.py
multilingualprogramming/: __main__.py  version.py
tests/: _test_helpers.py  ast_nodes_test.py  browser_module_test.py  complete_features_wasm_execution_test.py  complete_features_wat_test.py  ecosystem_compatibility_test.py  executor_ai_keywords_test.py  executor_concurrency_test.py  executor_test.py  language_completeness_cli_test.py  lexer_test.py  parser_test.py  polymodal_equivalence_test.py  process_async_test.py  process_capabilities_test.py  process_continuous_test.py  process_core_js_test.py  process_core_test.py  process_field_projection_test.py  process_graph_projection_test.py  process_graph_test.py  process_lsystem_test.py  process_migration_test.py  process_open_population_test.py  process_program_test.py  process_projection_test.py  process_rule_dsl_test.py  process_sequence_projection_test.py  process_static_projection_test.py  process_stochastic_test.py  runtime_builtins_test.py  spatial_pipeline_test.py  wat_generator_manifest_test.py  wat_generator_test.py  wat_generator_wasm_execution_test.py
tools/: stage_docs.py
(+131 files in other folders)
