[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multilingualprogramming"
dynamic = ["version"]
description = "Python application for multilingual programming"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
keywords = [
    "programming-language",
    "multilingual",
    "compiler",
    "transpiler",
    "education",
]
authors = [
    {name = "John Samuel", email = "johnsamuelwrites@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "roman>=3.3",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pylint",
]
wasm = [
    "wasmtime>=1.0.0",
]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "ollama>=0.2.0",
]
performance = [
    "wasmtime>=1.0.0",
    "numpy>=1.20.0",
]
all = [
    "wasmtime>=1.0.0",
    "numpy>=1.20.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "ollama>=0.2.0",
]

[project.scripts]
multilingual = "multilingualprogramming.__main__:main"
multilg = "multilingualprogramming.__main__:main"

[project.urls]
Homepage = "https://github.com/johnsamuelwrites/multilingual"
Documentation = "https://johnsamuel.info/multilingual/"
Repository = "https://github.com/johnsamuelwrites/multilingual"
Issues = "https://github.com/johnsamuelwrites/multilingual/issues"
Changelog = "https://github.com/johnsamuelwrites/multilingual/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["multilingualprogramming*"]

[tool.setuptools.dynamic]
version = {attr = "multilingualprogramming.version.__version__"}

[tool.setuptools.package-data]
multilingualprogramming = [
    "resources/*/*.json",
    "resources/*/*/*.json",
    "wasm/*.wasm",
    "wasm/*.so",
    "wasm/*.dll",
    "wasm/*.dylib",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.multilingual.wasm]
# WASM Configuration for Performance
enabled = true
backend = "cranelift"
memory_pages = 1024  # 64MB per page
compiler = "wasmtime"
fallback_python = true

[tool.multilingual.performance]
# Performance tuning options
vectorization = "enabled"
simd = "enabled"
parallel = "auto"
cache_wasm_modules = true
numpy_acceleration = true
